--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,11 @@
 {
+  "type":"module",
   "name": "jsbackend",
   "version": "1.0.0",
   "description": "this is for practice",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "node"
@@ -13,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "dotenv": "^16.6.1",
+    "express": "^5.1.0",
+    "mongoose": "^8.16.1"
   }
 }
